# CrowdSentinels-AI-MCP

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  AI_AGENT_INTEGRATION.md  ARCHITECTURE.md  CHAINSAW_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  CYBER_KILL_CHAIN_GUIDE.md  DETECTION_RULES_GUIDE.md  FIRST_TIME_SETUP.md  HOW_TO_USE.md  INVESTIGATION_PROMPTS_GUIDE.md  LICENSE  MANIFEST.in  Makefile  QUICK_START.md  README.md  THREAT_HUNTING_GUIDE.md  TRANSPORT_MODES.md  cliff.toml  docker-compose-elasticsearch.yml  docker-compose-opensearch.yml  pyproject.toml  renovate.json  server.json  setup.sh  switch-transport.sh
.github/workflows/: ci.yml  publish-mcp.yml  pypi-publish.yaml  release.yml
docs/plans/: 2026-03-18-auth-manual-testing-guide.md  VELOCIRAPTOR_IMPROVEMENTS.md
harness/: README.md  TESTING_GUIDE.md  __init__.py  helpers.py
rules/: application__bitbucket__audit__bitbucket_audit_full_data_export_triggered.eql  application__bitbucket__audit__bitbucket_audit_full_data_export_triggered.lucene  application__bitbucket__audit__bitbucket_audit_global_permissions_change_detected.eql  application__bitbucket__audit__bitbucket_audit_global_permissions_change_detected.lucene  application__bitbucket__audit__bitbucket_audit_global_secret_scanning_rule_deleted.eql  application__bitbucket__audit__bitbucket_audit_global_secret_scanning_rule_deleted.lucene  application__bitbucket__audit__bitbucket_audit_global_ssh_settings_change_detected.eql  application__bitbucket__audit__bitbucket_audit_global_ssh_settings_change_detected.lucene  application__bitbucket__audit__bitbucket_audit_log_configuration_update_detected.eql  application__bitbucket__audit__bitbucket_audit_log_configuration_update_detected.lucene  application__bitbucket__audit__bitbucket_audit_project_secret_scanning_allowlist_added.eql  application__bitbucket__audit__bitbucket_audit_project_secret_scanning_allowlist_added.lucene  application__bitbucket__audit__bitbucket_audit_secret_scanning_exempt_repository_detected.eql  application__bitbucket__audit__bitbucket_audit_secret_scanning_exempt_repository_detected.lucene  application__bitbucket__audit__bitbucket_audit_secret_scanning_rule_deleted.eql  application__bitbucket__audit__bitbucket_audit_secret_scanning_rule_deleted.lucene  application__bitbucket__audit__bitbucket_audit_unauthorized_access_detected.eql  application__bitbucket__audit__bitbucket_audit_unauthorized_access_detected.lucene  application__bitbucket__audit__bitbucket_audit_unauthorized_full_data_export_triggered.eql  application__bitbucket__audit__bitbucket_audit_unauthorized_full_data_export_triggered.lucene  application__bitbucket__audit__bitbucket_audit_user_details_export_attempt_detected.eql  application__bitbucket__audit__bitbucket_audit_user_details_export_attempt_detected.lucene  application__bitbucket__audit__bitbucket_audit_user_login_failure_detected.eql  application__bitbucket__audit__bitbucket_audit_user_login_failure_detected.lucene  application__bitbucket__audit__bitbucket_audit_user_login_failure_via_ssh_detected.eql  application__bitbucket__audit__bitbucket_audit_user_login_failure_via_ssh_detected.lucene  application__bitbucket__audit__bitbucket_audit_user_permissions_export_attempt_detected.eql  application__bitbucket__audit__bitbucket_audit_user_permissions_export_attempt_detected.lucene  application__django__appframework_django_exceptions.eql  application__django__appframework_django_exceptions.lucene  application__github__audit__github_delete_action_invoked.eql  application__github__audit__github_delete_action_invoked.lucene  application__github__audit__github_disable_high_risk_configuration.eql  application__github__audit__github_disable_high_risk_configuration.lucene  application__github__audit__github_disabled_outdated_dependency_or_vulnerability.eql  application__github__audit__github_disabled_outdated_dependency_or_vulnerability.lucene  application__github__audit__github_fork_private_repos_enabled_or_cleared.eql  application__github__audit__github_fork_private_repos_enabled_or_cleared.lucene  application__github__audit__github_new_org_member.eql  application__github__audit__github_new_org_member.lucene  (+4981 more)
skills/crowdsentinel-skills/: SKILL.md
src/: __init__.py  logging_config.py  paths.py  risk_config.py  server.py
src/agent/: __init__.py  auth.py  config.py  loop.py  mcp_bridge.py  oauth_pkce.py  prompts.py  providers.py
src/cli/: __init__.py  main.py
src/clients/: __init__.py  base.py  exceptions.py  velociraptor_client.py
src/storage/: __init__.py  auto_capture.py  config.py  investigation_state.py  models.py  smart_extractor.py  storage_manager.py
src/tools/: __init__.py  alias.py  asset_discovery.py  chainsaw_hunting.py  cluster.py  cross_correlation.py  data_stream.py  dfir_resources.py  document.py  eql_query.py  esql_hunting.py  general.py  index.py  investigation_prompts.py  investigation_state_tools.py  ioc_analysis.py  register.py  rule_management.py  schema_resources.py  smart_search.py  threat_hunting.py  threat_intel.py  velociraptor_tools.py  wireshark_tools.py  workflow_guidance.py
src/utils/: __init__.py  response_handler.py
src/wireshark/: __init__.py  config.py  models.py
tests/: test_cross_tool_ioc_sharing.py  test_esql_adaptive_index.py  test_esql_client.py  test_field_mapper.py  test_hunt_suspicious_process.py  test_hunting_rule_loader.py  test_investigation_state.py  test_live_elasticsearch_integration.py  test_mcp_investigation_tools.py  test_schema_registry.py
tests/agent/: test_auth_edge_cases.py  test_auth_profiles.py  test_mcp_bridge_resources.py  test_oauth_pkce.py  test_provider_integration.py  test_token_refresh.py
tests/cli/: test_cli_agent.py  test_cli_commands.py  test_cli_formatters.py
tests/clients/: test_misp_client.py  test_threat_intel_client.py
tests/storage/: test_active_investigation_persistence.py  test_related_iocs.py  test_stix_export.py  test_velociraptor_extractor.py
tests/system/: conftest.py  test_degradation.py  test_enrichment_pipeline.py  test_es_via_mcp.py  (+1 more)
(+100 files in other folders)
