[project]
name = "crowdsentinel-mcp-server"
version = "0.3.9"
description = "AI-powered threat hunting and incident response MCP server for Elasticsearch/OpenSearch with 79 tools, 6,060 detection rules, and baseline behaviour analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-only"}

authors = [
    {name = "medjedtxm", email = "medjed@crowdsentinel.io"}
]

keywords = [
    "mcp",
    "model-context-protocol",
    "elasticsearch",
    "opensearch",
    "threat-hunting",
    "incident-response",
    "security",
    "siem",
    "llm",
    "ai-security",
    "detection-rules",
    "mitre-attack",
    "cyber-kill-chain",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Environment :: Console",
]

dependencies = [
    "elasticsearch==8.17.2",
    "opensearch-py==2.8.0",
    "mcp==1.9.2",
    "python-dotenv==1.1.0",
    "fastmcp==2.8.0",
    "pydantic>=2.11.0,<2.12.0",
    "anthropic==0.49.0",
    "tomli==2.2.1",
    "tomli-w==1.2.0",
]

[project.urls]
Homepage = "https://github.com/thomasxm/CrowdSentinels-AI-MCP"
Repository = "https://github.com/thomasxm/CrowdSentinels-AI-MCP"
Documentation = "https://github.com/thomasxm/CrowdSentinels-AI-MCP#documentation"
Issues = "https://github.com/thomasxm/CrowdSentinels-AI-MCP/issues"
Changelog = "https://github.com/thomasxm/CrowdSentinels-AI-MCP/blob/main/CHANGELOG.md"

[project.scripts]
crowdsentinel-mcp-server = "src.server:elasticsearch_mcp_server"
crowdsentinel-opensearch-mcp-server = "src.server:opensearch_mcp_server"
crowdsentinel = "src.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = [
    "src",
]

[tool.hatch.build.targets.wheel.force-include]
rules = "src/rules"
"detection-rules/hunting" = "src/detection-rules/hunting"
"detection-rules/rules" = "src/detection-rules/rules"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "rules/",
    "detection-rules/hunting/",
    "detection-rules/rules/",
    "LICENSE",
    "README.md",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
