[project]
name = "crowdsentinel-mcp-server"
version = "0.5.6"
description = "AI-powered threat hunting and incident response MCP server for Elasticsearch/OpenSearch with 79 tools, 6,060 detection rules, and baseline behaviour analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-only"}

authors = [
    {name = "medjedtxm", email = "medjed@crowdsentinel.io"}
]

keywords = [
    "mcp",
    "model-context-protocol",
    "elasticsearch",
    "opensearch",
    "threat-hunting",
    "incident-response",
    "security",
    "siem",
    "llm",
    "ai-security",
    "detection-rules",
    "mitre-attack",
    "cyber-kill-chain",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Environment :: Console",
]

dependencies = [
    "elasticsearch==8.17.2",
    "opensearch-py==2.8.0",
    "mcp==1.9.2",
    "python-dotenv==1.1.0",
    "fastmcp==2.8.0",
    "pydantic>=2.11.0,<2.12.0",
    "anthropic==0.49.0",
    "tomli==2.2.1",
    "tomli-w==1.2.0",
    "stix2>=3.0.0,<4.0.0",
    "pymisp>=2.4.190",
]

[project.urls]
Homepage = "https://github.com/thomasxm/CrowdSentinels-AI-MCP"
Repository = "https://github.com/thomasxm/CrowdSentinels-AI-MCP"
Documentation = "https://github.com/thomasxm/CrowdSentinels-AI-MCP#documentation"
Issues = "https://github.com/thomasxm/CrowdSentinels-AI-MCP/issues"
Changelog = "https://github.com/thomasxm/CrowdSentinels-AI-MCP/blob/main/CHANGELOG.md"

[project.scripts]
crowdsentinel-mcp-server = "src.server:elasticsearch_mcp_server"
crowdsentinel-opensearch-mcp-server = "src.server:opensearch_mcp_server"
crowdsentinel = "src.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = [
    "src",
]

[tool.hatch.build.targets.wheel.force-include]
rules = "src/rules"
"detection-rules/hunting" = "src/detection-rules/hunting"
"detection-rules/rules" = "src/detection-rules/rules"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "rules/",
    "detection-rules/hunting/",
    "detection-rules/rules/",
    "LICENSE",
    "README.md",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.11.0",
    "pre-commit>=4.0.0",
    "bandit>=1.8.0",
    "detect-secrets>=1.5.0",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (mirrors CI rules in .github/workflows/ci.yml)
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
markers = [
    "system: Full MCP protocol tests requiring real Elasticsearch and internet access",
    "expects_tool_failure: Suppress log-capture failure for tests that deliberately provoke tool errors",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests", "harness"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "ERA", # eradicate (commented-out code)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module-level import not at top
    "F841",   # local variable assigned but never used
    "B904",   # raise without from inside except
    "B011",   # do not assert False
    "B905",   # zip without strict
    "PT011",  # pytest.raises too broad
    "PT015",  # assert always fails
    "PT017",  # assert in except
    "PT018",  # composite assert
    "SIM102", # collapsible if
    "SIM103", # return bool directly
    "SIM105", # use contextlib.suppress
    "SIM108", # use ternary operator
    "SIM115", # use context manager for open
    "SIM118", # use key in dict
    "B007",   # unused loop variable
    "B024",   # abstract class without abstract method
    "C414",   # unnecessary list call within sorted
    "C401",   # unnecessary generator, use set comprehension
    "ERA001", # commented-out code
    "W293",   # whitespace before ':'
    "RET504", # unnecessary assignment before return
    "PIE790", # unnecessary pass
    "PIE810", # unnecessary spread unpacking
    "PT003",  # scope='function' is implied
    "PT006",  # wrong type for parametrize
    "PT009",  # use regular assert
    "PT019",  # fixture without value
    "PT027",  # use pytest.raises instead of assertRaises
    "RET505", # unnecessary else after return
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Bandit — SAST (mirrors CI bandit config)
# ---------------------------------------------------------------------------

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests", "detection-rules", ".venv"]
skips = ["B101"]  # assert used in non-test code (acceptable for CLI tool)
